New images, removed icons, etc.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
   <link href="css/DMAlaw2.css" rel="stylesheet" type="text/css" />
+  <link href='http://fonts.googleapis.com/css?family=Lora|PT+Serif|Exo:200,400|EB+Garamond|Oxygen:400,300|Cardo' rel='stylesheet' type='text/css'>
   <title>Albertson Law Offices</title>
 
 </head>
@@ -16,6 +17,10 @@
         Law<br>
         Offices<br>
         </div>
+        <div class="trans_header">
+          <!-- <h2>Legal Representation You Can Trust</h2> -->
+        </div>
+
       </div>
     </div>
   </div>
@@ -23,19 +28,20 @@
     <div class="row tag_line">
       <h2>Legal Representation You Can Trust</h2>
     </div>
+    <h3>from Attorney Dan M. Albertson</h3>
     <div class="row copy">
       <div class="col-lg-4">
-        <i class="fa fa-suitcase"></i>
+        <!-- <i class="fa fa-suitcase"></i> -->
         <h4>Employment</h4>
         <p>When you have to deal with a major corporation, our experience can help you level the playing field so you receive the best result possible. We will provide you with a complete range of employment law service that you can trust.</p>
       </div>
       <div class="col-lg-4">
-        <i class="fa fa-ambulance"></i>
+        <!-- <i class="fa fa-ambulance"></i> -->
         <h4>Personal Injury</h4>
         <p>If you have been injured in an accident seek medical help and then call us for legal representation that will fight for your rights in your personal injury case.</p>
       </div>
       <div class="col-lg-4">
-        <i class="fa fa-user-md"></i>
+        <!-- <i class="fa fa-user-md"></i> -->
         <h4>Medical Malpractice</h4>
         <p>When you receive legal representation from us, we will help you put an end to the pain and suffering that has happened due to a medical error. We will provide you with the best legal representation that will get you the compensation you deserve.</p>
       </div>
@@ -43,6 +49,7 @@
   </div>
   <div class="contact">
     <div class="container">
+      <div class="logo"></div>
       <div class="row">
         <h1>Contact</h1>
       </div>
@@ -68,8 +75,10 @@
           </tr>
         </table>
       </div>
+
     </div>
-    <div class="logo"></div>
+  </div>
+  <div class="bottom_photo">
   </div>
 </body>
 </html>
