Added a footer plus a few other tweaks

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="row tag_line">
       <h2>Legal Representation You Can Trust</h2>
     </div>
-    <h3>from Attorney Dan M. Albertson</h3>
+    <h3>From Attorney Dan M. Albertson</h3>
     <div class="row copy">
       <div class="col-lg-4">
         <!-- <i class="fa fa-suitcase"></i> -->
@@ -57,7 +57,7 @@
         <table>
           <tr>
             <td class="lbl">Address:</td>
-            <td>711 Court A<br>Ste. 200<br>Tacoma, WA 98402</td>
+            <td>711 Court A<br>Ste. 200<br>Tacoma, WA 98402<br><a href="https://www.google.com/maps/preview#!q=711+Court+A+Tacoma%2C+WA+98402&data=!4m15!2m14!1m13!1s0x5490557593ada8e3%3A0x818d54634dc899f0!3m8!1m3!1d2920!2d-122.4385473!3d47.2566565!3m2!1i1440!2i828!4f13.1!4m2!3d47.2566565!4d-122.4385473", target="_blank" id = "map">Map It</td>
           </tr>
           <tr>
             <td class="lbl">Phone:</td>
@@ -70,15 +70,24 @@
           <tr>
             <td class="lbl">Business Hours:</td>
             <td>Monday - Friday 8:30 AM to 5:00 PM<br>
-                Extended Hours: Flexible appointment hours available<br>
+                Flexible appointment hours available<br>
             </td>
           </tr>
         </table>
       </div>
-
     </div>
   </div>
   <div class="bottom_photo">
+
+    <div class="place">
+      <div id="footer">
+        <div class="container">
+          Created with love by the Albertson Bros
+        </div>
+      </div>
+    </div>
+
   </div>
+
 </body>
 </html>
