changed div sizes
trying to make it more responsive

--- a/index.html
+++ b/index.html
@@ -79,15 +79,16 @@
   </div>
   <div class="bottom_photo">
 
-    <div class="place">
+    <!-- <div class="place">
       <div id="footer">
         <div class="container">
           Created with love by the Albertson Bros
         </div>
       </div>
     </div>
-
+ -->
   </div>
+
 
 </body>
 </html>
