copy updated per Dan

--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
       <div class="col-lg-4">
         <!-- <i class="fa fa-suitcase"></i> -->
         <h4>Employment</h4>
-        <p>When you have to deal with a major corporation, our experience can help you level the playing field so you receive the best result possible. We will provide you with a complete range of employment law service that you can trust.</p>
+        <p>We represent employees and firmer employees.  When you have been wrongly died from your job or treated unfairly in violation of the law, we can help.  We have assisted employees working at small local businesses and large national companies.  Know your rights.  Give us a call.  Cases are handled on a contingency basis so you pay no fee unless you receive compensation.  There is no charge for  initial consultations.</p>
       </div>
       <div class="col-lg-4">
         <!-- <i class="fa fa-ambulance"></i> -->
-        <h4>Personal Injury</h4>
-        <p>If you have been injured in an accident seek medical help and then call us for legal representation that will fight for your rights in your personal injury case.</p>
+        <h4>Sexual Harassment</h4>
+        <p>We represent employees who have been sexually harassed or forced to work in a hostile environment.  If you have been sexually harassed or had to try to work in a hostile environment, call us.  All cases are handled on a contingency basis so you pay no fee unless you receive compensation.  Initial consultations are free.</p>
       </div>
       <div class="col-lg-4">
         <!-- <i class="fa fa-user-md"></i> -->
-        <h4>Medical Malpractice</h4>
-        <p>When you receive legal representation from us, we will help you put an end to the pain and suffering that has happened due to a medical error. We will provide you with the best legal representation that will get you the compensation you deserve.</p>
+        <h4>Auto Accidents & Other Injuries</h4>
+        <p>If you have been injured in an automobile or other accident, we are here for you.  Insurance companies have experienced adjusters and lawyers representing them.  For over 30 years we have helped to level the playing field on behalf of people who have been injured,  we can let you know what to expect and what your rights are.  Our representation is on a contingency basis so you pay no fee unless you receive compensation.  Initial consultations are free.</p>
       </div>
     </div>
   </div>
@@ -65,7 +65,7 @@
           </tr>
           <tr>
             <td class="lbl">Email:</td>
-            <td><a href="mailto:dmalaw@hotmail.com">dmalaw@hotmail.com</a></td>
+            <td><a href="mailto:AlbertsonLawOffices@gmail.com">AlbertsonLawOffices@gmail.com</a></td>
           </tr>
           <tr>
             <td class="lbl">Business Hours:</td>
