--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
   <link href="css/DMAlaw2.css" rel="stylesheet" type="text/css" />
-  <link href='http://fonts.googleapis.com/css?family=Lora|PT+Serif|Exo:200,400|EB+Garamond|Oxygen:400,300|Cardo' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Lora|PT+Serif|Exo:200,400|EB+Garamond|Open+Sans|Cardo' rel='stylesheet' type='text/css'>
   <title>Albertson Law Offices</title>
 
 </head>
@@ -18,38 +18,42 @@
         Offices<br>
         </div>
         <div class="trans_header">
-          <!-- <h2>Legal Representation You Can Trust</h2> -->
         </div>
-
       </div>
     </div>
   </div>
-  <div class="container copy_section">
-    <div class="row tag_line">
-      <h2>Legal Representation You Can Trust</h2>
-    </div>
-    <h3>From Attorney Dan M. Albertson</h3>
-    <div class="row copy">
-      <div class="col-lg-4">
-        <!-- <i class="fa fa-suitcase"></i> -->
-        <h4>Employment</h4>
-        <p>We represent employees and firmer employees.  When you have been wrongly died from your job or treated unfairly in violation of the law, we can help.  We have assisted employees working at small local businesses and large national companies.  Know your rights.  Give us a call.  Cases are handled on a contingency basis so you pay no fee unless you receive compensation.  There is no charge for  initial consultations.</p>
+  <div class="copy_section">
+    <div class="container">
+      <div class="row tag_line">
+        <h2>Legal Representation You Can Trust</h2>
       </div>
-      <div class="col-lg-4">
-        <!-- <i class="fa fa-ambulance"></i> -->
-        <h4>Sexual Harassment</h4>
-        <p>We represent employees who have been sexually harassed or forced to work in a hostile environment.  If you have been sexually harassed or had to try to work in a hostile environment, call us.  All cases are handled on a contingency basis so you pay no fee unless you receive compensation.  Initial consultations are free.</p>
+      <h3>From Attorney Dan M. Albertson</h3>
+      <div class="row copy">
+        <div class="col-lg-4">
+          <!-- <i class="fa fa-suitcase"></i> -->
+          <h3>Employment</h3>
+          <p>We represent employees and former employees. When you have been wrongly died from your job or treated unfairly in violation of the law, we can help. We have assisted employees working at small local businesses and large national companies.</p>
+        </div>
+        <div class="col-lg-4">
+          <!-- <i class="fa fa-ambulance"></i> -->
+          <h3>Sexual Harassment</h3>
+          <p>We represent employees who have been sexually harassed or forced to work in a hostile environment. If you have been sexually harassed or had to try to work in a hostile environment, call us.</p>
+        </div>
+        <div class="col-lg-4">
+          <!-- <i class="fa fa-user-md"></i> -->
+          <h3>Auto Accidents & Other Injuries</h3>
+          <p>If you have been injured in an automobile or other accident, we are here for you. Insurance companies have experienced adjusters and lawyers representing them. For over 30 years we have helped to level the playing field on behalf of people who have been injured,  we can let you know what to expect and what your rights are.</p>
+        </div>
       </div>
-      <div class="col-lg-4">
-        <!-- <i class="fa fa-user-md"></i> -->
-        <h4>Auto Accidents & Other Injuries</h4>
-        <p>If you have been injured in an automobile or other accident, we are here for you.  Insurance companies have experienced adjusters and lawyers representing them.  For over 30 years we have helped to level the playing field on behalf of people who have been injured,  we can let you know what to expect and what your rights are.  Our representation is on a contingency basis so you pay no fee unless you receive compensation.  Initial consultations are free.</p>
+      <div class="notice">
+        <p>All cases are handled on a contingency basis so you pay no fee unless you receive compensation.  Initial consultations are free. Know your rights. Give us a call.</p>
       </div>
     </div>
   </div>
+  <div class="contact_cover"></div>
+  <div class="contact_bg"></div>
   <div class="contact">
     <div class="container">
-      <div class="logo"></div>
       <div class="row">
         <h1>Contact</h1>
       </div>
@@ -57,7 +61,7 @@
         <table>
           <tr>
             <td class="lbl">Address:</td>
-            <td>711 Court A<br>Ste. 200<br>Tacoma, WA 98402<br><a href="https://www.google.com/maps/preview#!q=711+Court+A+Tacoma%2C+WA+98402&data=!4m15!2m14!1m13!1s0x5490557593ada8e3%3A0x818d54634dc899f0!3m8!1m3!1d2920!2d-122.4385473!3d47.2566565!3m2!1i1440!2i828!4f13.1!4m2!3d47.2566565!4d-122.4385473", target="_blank" id = "map">Map It</td>
+            <td>711 Court A<br>Ste. 200<br>Tacoma, WA 98402<br><a href="https://www.google.com/maps/preview#!q=711+Court+A+Tacoma%2C+WA+98402&data=!4m15!2m14!1m13!1s0x5490557593ada8e3%3A0x818d54634dc899f0!3m8!1m3!1d2920!2d-122.4385473!3d47.2566565!3m2!1i1440!2i828!4f13.1!4m2!3d47.2566565!4d-122.4385473", target="_blank" id="map">Map It <i class="fa fa-map-marker"></i></td>
           </tr>
           <tr>
             <td class="lbl">Phone:</td>
@@ -75,9 +79,11 @@
           </tr>
         </table>
       </div>
+      <div>Member of <br>Washington State Bar Association</div>
+      <div class="logo"></div>
     </div>
   </div>
-  <div class="bottom_photo">
+  <!-- <div class="bottom_photo"> -->
 
     <!-- <div class="place">
       <div id="footer">
@@ -87,7 +93,7 @@
       </div>
     </div>
  -->
-  </div>
+  <!-- </div> -->
 
 
 </body>
