final styling changes and copy edits, styled notice and added footer

--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
         <div class="col-lg-4">
           <!-- <i class="fa fa-suitcase"></i> -->
           <h3>Employment</h3>
-          <p>We represent employees and former employees. When you have been wrongly died from your job or treated unfairly in violation of the law, we can help. We have assisted employees working at small local businesses and large national companies.</p>
+          <p>We represent employees and former employees. When you have been wrongly fired from your job or treated unfairly in violation of the law, we can help. We have assisted employees working at small local businesses and large national companies.</p>
         </div>
         <div class="col-lg-4">
           <!-- <i class="fa fa-ambulance"></i> -->
           <h3>Sexual Harassment</h3>
-          <p>We represent employees who have been sexually harassed or forced to work in a hostile environment. If you have been sexually harassed or had to try to work in a hostile environment, call us.</p>
+          <p>We represent employees who have been sexually harassed or forced to work in a hostile environment. If you have been sexually harassed or have been forced to work in a hostile environment, call us.</p>
         </div>
         <div class="col-lg-4">
           <!-- <i class="fa fa-user-md"></i> -->
           <h3>Auto Accidents & Other Injuries</h3>
-          <p>If you have been injured in an automobile or other accident, we are here for you. Insurance companies have experienced adjusters and lawyers representing them. For over 30 years we have helped to level the playing field on behalf of people who have been injured,  we can let you know what to expect and what your rights are.</p>
+          <p>If you have been injured in an automobile or other accident, we are here for you. Insurance companies have experienced adjusters and lawyers representing them. For over 30 years we have helped to level the playing field on behalf of people who have been injured. We can let you know what to expect and what your rights are.</p>
         </div>
       </div>
       <div class="notice">
-        <p>All cases are handled on a contingency basis so you pay no fee unless you receive compensation.  Initial consultations are free. Know your rights. Give us a call.</p>
+        <p>Cases are handled on a contingency basis so you pay no fee unless you receive compensation. <br>Initial consultations are free. Know your rights. Give us a call.</p>
       </div>
     </div>
   </div>
@@ -61,7 +61,7 @@
         <table>
           <tr>
             <td class="lbl">Address:</td>
-            <td>711 Court A<br>Ste. 200<br>Tacoma, WA 98402<br><a href="https://www.google.com/maps/preview#!q=711+Court+A+Tacoma%2C+WA+98402&data=!4m15!2m14!1m13!1s0x5490557593ada8e3%3A0x818d54634dc899f0!3m8!1m3!1d2920!2d-122.4385473!3d47.2566565!3m2!1i1440!2i828!4f13.1!4m2!3d47.2566565!4d-122.4385473", target="_blank" id="map">Map It <i class="fa fa-map-marker"></i></td>
+            <td>711 Court A<br>Ste. 200<br>Tacoma, WA 98402<br><a href="https://www.google.com/maps/preview#!q=711+Court+A+Tacoma%2C+WA+98402&data=!4m15!2m14!1m13!1s0x5490557593ada8e3%3A0x818d54634dc899f0!3m8!1m3!1d2920!2d-122.4385473!3d47.2566565!3m2!1i1440!2i828!4f13.1!4m2!3d47.2566565!4d-122.4385473", target="_blank" id="map"><i class="fa fa-map-marker"></i> Map It</td>
           </tr>
           <tr>
             <td class="lbl">Phone:</td>
@@ -81,19 +81,11 @@
       </div>
       <div>Member of <br>Washington State Bar Association</div>
       <div class="logo"></div>
+      <footer>
+        <p>Made with love by <a href="http://longreliever.com">Longreliever</a></p>
+      </footer>
     </div>
   </div>
-  <!-- <div class="bottom_photo"> -->
-
-    <!-- <div class="place">
-      <div id="footer">
-        <div class="container">
-          Created with love by the Albertson Bros
-        </div>
-      </div>
-    </div>
- -->
-  <!-- </div> -->
 
 
 </body>
