have I committed anything before? Not sure. But I finally made some SEO changes

--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="description" content="Albertson Law Offices helps with employment, sexual harassment, and auto accident and other injury cases in Tacoma, WA.">
   <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
   <link href="css/DMAlaw2.css" rel="stylesheet" type="text/css" />
   <link href='http://fonts.googleapis.com/css?family=Lora|PT+Serif|Exo:200,400|EB+Garamond|Open+Sans|Cardo' rel='stylesheet' type='text/css'>
   <title>Albertson Law Offices</title>
-
 </head>
 <body>
   <div class="main_photo">
     <div class="photofilter">
       <div class="container">
         <div class="trans_box">
-        Albertson<br>
-        Law<br>
-        Offices<br>
+          <h1>Albertson<br>Law<br>Offices<br></h1>
         </div>
         <div class="trans_header">
         </div>
@@ -30,32 +28,29 @@
       <h3>From Attorney Dan M. Albertson</h3>
       <div class="row copy">
         <div class="col-lg-4">
-          <!-- <i class="fa fa-suitcase"></i> -->
           <h3>Employment</h3>
           <p>We represent employees and former employees. When you have been wrongly fired from your job or treated unfairly in violation of the law, we can help. We have assisted employees working at small local businesses and large national companies.</p>
         </div>
         <div class="col-lg-4">
-          <!-- <i class="fa fa-ambulance"></i> -->
           <h3>Sexual Harassment</h3>
           <p>We represent employees who have been sexually harassed or forced to work in a hostile environment. If you have been sexually harassed or have been forced to work in a hostile environment, call us.</p>
         </div>
         <div class="col-lg-4">
-          <!-- <i class="fa fa-user-md"></i> -->
           <h3>Auto Accidents & Other Injuries</h3>
           <p>If you have been injured in an automobile or other accident, we are here for you. Insurance companies have experienced adjusters and lawyers representing them. For over 30 years we have helped to level the playing field on behalf of people who have been injured. We can let you know what to expect and what your rights are.</p>
         </div>
       </div>
       <div class="notice">
-        <p>Cases are handled on a contingency basis so you pay no fee unless you receive compensation. <br>Initial consultations are free. Know your rights. Give us a call.</p>
+        <p>Cases are handled on a contingency basis so you pay no fee unless you receive compensation. <br id="notice_break">Initial consultations are free. Know your rights. Give us a call.</p>
       </div>
     </div>
   </div>
   <div class="contact_cover"></div>
   <div class="contact_bg"></div>
-  <div class="contact">
+  <div class="contact" itemscope itemtype="http://schema.org/Attorney">
     <div class="container">
       <div class="row">
-        <h1>Contact</h1>
+        <h3>Contact</h3>
       </div>
       <div class="row">
         <table>
@@ -86,7 +81,5 @@
       </footer>
     </div>
   </div>
-
-
 </body>
 </html>
