--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta name="description" content="Albertson Law Offices helps with employment, sexual harassment, and auto accident and other injury cases in Tacoma, WA.">
   <link href="http://getbootstrap.com/dist/css/bootstrap.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="http://www.clker.com/cliparts/y/x/Q/S/b/q/scales-of-justice-md.png"/>
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet" type="text/css">
   <link href="css/DMAlaw2.css" rel="stylesheet" type="text/css" />
   <link href='http://fonts.googleapis.com/css?family=Lora|PT+Serif|Exo:200,400|EB+Garamond|Open+Sans|Cardo' rel='stylesheet' type='text/css'>
